--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -18,15 +18,12 @@
                 <a href="/admin" class="nav-link active">
                     <i class="fas fa-home"></i> Dashboard
                 </a>
-                <!-- <a href="/admin/orders" class="nav-link">
-                    <i class="fas fa-box"></i> Manage Orders
-                </a>
                 <a href="/admin/users" class="nav-link">
                     <i class="fas fa-users"></i> Users
                 </a>
                 <a href="/admin/products" class="nav-link">
                     <i class="fas fa-coffee"></i> Products
-                </a> -->
+                </a>
             </nav>
             <div class="sidebar-footer">
                 <button id="logoutBtn" class="logout-btn">
@@ -86,7 +83,17 @@
                 <div class="section">
                     <div class="section-header">
                         <h2>Recent Orders</h2>
-                        <a href="/admin/orders" class="btn btn-primary">View All</a>
+                        <div class="date-filter">
+                            <button class="btn btn-success btn-sm" onclick="manualRefresh()" title="Refresh Now">
+                                <i class="fas fa-sync-alt"></i> Refresh
+                            </button>
+                            <label for="startDate">From:</label>
+                            <input type="date" id="startDate" class="filter-input">
+                            <label for="endDate">To:</label>
+                            <input type="date" id="endDate" class="filter-input">
+                            <button class="btn btn-primary btn-sm" onclick="applyDateFilter()">Filter</button>
+                            <button class="btn btn-secondary btn-sm" onclick="resetDateFilter()">Reset</button>
+                        </div>
                     </div>
                     <div class="table-wrapper">
                         <table class="table">
@@ -108,50 +115,6 @@
                         </table>
                     </div>
                 </div>
-            </div>
-
-            <div id="ordersView" style="display: none;">
-                <!-- Orders Management -->
-                <div class="page-header">
-                    <h1>Manage Orders</h1>
-                </div>
-
-                <div class="filters">
-                    <select id="statusFilter" class="filter-select">
-                        <option value="">All Status</option>
-                        <option value="pending">Pending</option>
-                        <option value="processing">Processing</option>
-                        <option value="completed">Completed</option>
-                        <option value="cancelled">Cancelled</option>
-                    </select>
-                    <input type="text" id="searchInput" class="search-input" placeholder="Search by order number...">
-                </div>
-
-                <div class="section">
-                    <div class="table-wrapper">
-                        <table class="table">
-                            <thead>
-                                <tr>
-                                    <th>Order ID</th>
-                                    <th>Customer Name</th>
-                                    <th>Email</th>
-                                    <th>Total Amount</th>
-                                    <th>Status</th>
-                                    <th>Date</th>
-                                    <th>Action</th>
-                                </tr>
-                            </thead>
-                            <tbody id="ordersTable">
-                                <tr>
-                                    <td colspan="7" class="text-center">Loading...</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-
-                <!-- Pagination -->
-                <div class="pagination" id="pagination"></div>
             </div>
 
             <div id="usersView" style="display: none;">
@@ -192,6 +155,9 @@
                 <!-- Products Management -->
                 <div class="page-header">
                     <h1>Manage Products</h1>
+                    <button class="btn btn-primary" onclick="openProductModal()">
+                        <i class="fas fa-plus"></i> Add Product
+                    </button>
                 </div>
 
                 <div class="section">
@@ -200,18 +166,19 @@
                             <thead>
                                 <tr>
                                     <th>ID</th>
+                                    <th>Image</th>
                                     <th>Product Name</th>
                                     <th>Category</th>
                                     <th>Price</th>
                                     <th>Stock</th>
                                     <th>Featured</th>
                                     <th>Active</th>
-                                    <th>Date</th>
+                                    <th>Action</th>
                                 </tr>
                             </thead>
                             <tbody id="productsTable">
                                 <tr>
-                                    <td colspan="8" class="text-center">Loading...</td>
+                                    <td colspan="9" class="text-center">Loading...</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -232,7 +199,72 @@
                 <button class="modal-close">&times;</button>
             </div>
             <div class="modal-body" id="orderDetailContent">
-                <!-- Order details will be loaded here -->
+            </div>
+        </div>
+    </div>
+
+    <!-- Product Modal -->
+    <div id="productModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 id="productModalTitle">Add Product</h2>
+                <button class="modal-close" onclick="closeProductModal()">&times;</button>
+            </div>
+            <div class="modal-body">
+                <form id="productForm" onsubmit="saveProduct(event)">
+                    <input type="hidden" id="productId">
+                    <div class="form-group">
+                        <label for="productName">Product Name *</label>
+                        <input type="text" id="productName" required class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="productDescription">Description</label>
+                        <textarea id="productDescription" rows="3" class="form-control"></textarea>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="productPrice">Price (USD) *</label>
+                            <input type="number" id="productPrice" step="0.01" min="0" required class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <label for="productStock">Stock *</label>
+                            <input type="number" id="productStock" min="0" required class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="productCategory">Category</label>
+                            <select id="productCategory" class="form-control">
+                                <option value="">Select Category</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="productRating">Rating</label>
+                            <input type="number" id="productRating" step="0.1" min="0" max="5" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label>
+                                <input type="checkbox" id="productFeatured"> Featured Product
+                            </label>
+                        </div>
+                        <div class="form-group">
+                            <label>
+                                <input type="checkbox" id="productActive" checked> Active
+                            </label>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="productImage">Product Image</label>
+                        <input type="file" id="productImage" accept="image/*" class="form-control">
+                        <div id="currentImage" style="margin-top: 10px;"></div>
+                    </div>
+                    <div class="form-actions">
+                        <button type="button" class="btn btn-secondary" onclick="closeProductModal()">Cancel</button>
+                        <button type="submit" class="btn btn-primary" id="productSubmitBtn">Save Product</button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
@@ -242,12 +274,12 @@
         (function() {
             const token = localStorage.getItem('adminToken');
             if (!token) {
-                window.location.href = '/admin/login';
+                window.location.href = '/admin/login.html';
                 return;
             }
             
             // Optional: Verify token with server
-            fetch('https://server-ombe.codingankuu.com/api/admin/dashboard', {
+            fetch('http://localhost:5000/api/admin/dashboard', {
                 headers: {
                     'Content-Type': 'application/json',
                     'Authorization': `Bearer ${token}`
@@ -258,7 +290,7 @@
                     // Token invalid or expired
                     localStorage.removeItem('adminToken');
                     localStorage.removeItem('adminUser');
-                    window.location.href = '/admin/login';
+                    window.location.href = '/admin/login.html';
                 }
             })
             .catch(error => {
