Update Admin Page

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -279,7 +279,7 @@
             }
             
             // Optional: Verify token with server
-            fetch('http://localhost:5000/api/admin/dashboard', {
+            fetch('https://server-ombe.codingankuu.com/api/admin/dashboard', {
                 headers: {
                     'Content-Type': 'application/json',
                     'Authorization': `Bearer ${token}`
