--- a/public/admin/login.html
+++ b/public/admin/login.html
@@ -197,7 +197,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <script>
-        const API_BASE = 'http://localhost:5000/api';
+        const API_BASE = 'https://server-ombe.codingankuu.com/api';
 
         document.getElementById('loginForm').addEventListener('submit', async function(e) {
             e.preventDefault();
